@@ -100,3 +100,8 @@ NPError PluginGetValue(NPPVariable variable, void *value)
 
 
 }
+
+void pluginSpecific(CPlugin * instance)
+{
+
+}
